--- a/data_spaceedit.htm
+++ b/data_spaceedit.htm
@@ -75,6 +75,7 @@
                         <!--button class="btn" onclick="window.location.href='data_list_noTree.htm';">放棄</button-->
                         <div class="function">
                             <ul>
+                                <li ><a href="spacerentEdit.htm">租借狀態設定</a></li>
                                 <li class="icon_back"><a href="javascript: history.back();">回上一頁</a></li>
                             </ul>
                         </div>
@@ -208,13 +209,13 @@
                                                         <div class="form_title">格局人數： </div>
                                                         <div class="form_content">
                                                             <div class="check_grp form_inline">
-                                                                <label><input name="222" type="checkbox" value=""><span>教室型</span>： <input name="" type="text" value="" style="width:50px;"> 人</label>
-                                                                <label><input name="222" type="checkbox" value=""><span>劇院型</span>： <input name="" type="text" value="" style="width:50px;"> 人</label>
-                                                                <label><input name="222" type="checkbox" value=""><span>劇院型含彈射椅</span>： <input name="" type="text" value="" style="width:50px;"> 人</label>
-                                                                <label><input name="222" type="checkbox" value=""><span>馬蹄型U</span>： <input name="" type="text" value="" style="width:50px;"> 人</label>
-                                                                <label><input name="222" type="checkbox" value=""><span>洽談</span>： <input name="" type="text" value="" style="width:50px;"> 人</label>
-                                                                <label><input name="222" type="checkbox" value=""><span>展覽</span>： <input name="" type="text" value="" style="width:50px;"> 人</label>
-                                                                <label><input name="222" type="checkbox" value=""><span>其他格局</span>： <input name="" type="text" value="" style="width:50px;"> 人</label>
+                                                                <label><input name="222" type="checkbox" value="">教室型： <input name="" type="text" value="" style="width:50px;"> 人</label>
+                                                                <label><input name="222" type="checkbox" value="">劇院型： <input name="" type="text" value="" style="width:50px;"> 人</label>
+                                                                <label><input name="222" type="checkbox" value="">劇院型含彈射椅： <input name="" type="text" value="" style="width:50px;"> 人</label>
+                                                                <label><input name="222" type="checkbox" value="">馬蹄型U： <input name="" type="text" value="" style="width:50px;"> 人</label>
+                                                                <label><input name="222" type="checkbox" value="">洽談： <input name="" type="text" value="" style="width:50px;"> 人</label>
+                                                                <label><input name="222" type="checkbox" value="">展覽： <input name="" type="text" value="" style="width:50px;"> 人</label>
+                                                                <label><input name="222" type="checkbox" value="">其他格局： <input name="" type="text" value="" style="width:50px;"> 人</label>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -765,10 +766,10 @@
 
                                                     </div>
                                                     <div class="flex-form">
-                                                        <h4>關聯問答
+                                                        <h4>關聯問答(開啟lightbox選擇模式)
                                                             <button class="btn btn-xs"><i class="i_addfile"></i>選入資料</button>
                                                         </h4>
-                                                        <div class="upload_block">
+                                                        <div class="upload_block" style="clear:both;">
                                                             <div class="attachment_list">
                                                                 <div class="item">
                                                                     <!-- number -->
