--- a/index_list.html
+++ b/index_list.html
@@ -231,7 +231,7 @@
 
         <div class="table_wrapper">
             <table>
-              <caption>TICC 客製化功能 - 4/25更新</caption>
+              <caption>TICC 客製化功能</caption>
                 <thead>
                     <tr>
                         <th class="num">編號</th>
@@ -247,7 +247,7 @@
                             <ul>
                                 <li>1-1.場地清單 <a href="space_list.htm" target="_blank"></a></li>
                                 <li><font style="color:red;">(更新關聯設定)</font>1-2.新增/編修場地 <a href="data_spaceedit.htm" target="_blank"></a></li>
-                                <li>1-3.租用狀態/費用管理 <a href="#" target="_blank"></a></li>
+                                <li>1-3.租用費用管理 <a href="spacerentEdit.htm" target="_blank"></a></li>
                                 <li>1-4.設備管理 <a href="#" target="_blank"></a></li>
                             </ul>
                         </td>
@@ -278,7 +278,7 @@
 
         <div class="table_wrapper">
             <table>
-              <caption>勞安所 客製化功能 - 6/1更新</caption>
+              <caption>勞安所 客製化功能</caption>
                 <thead>
                     <tr>
                         <th class="num">編號</th>
@@ -292,8 +292,8 @@
                         <td>AP功能：空間管理</td>
                         <td>
                             <ul>
-                                <li>1-1.場地清單 <a href="ilosh_space_list.htm" target="_blank"></a></li>
-                                <li>1-2.新增/編修場地 <a href="ilosh_data_spaceedit.htm" target="_blank"></a></li>
+                                <li>1-1.場地/設備管理清單 <a href="ilosh_space_list.htm" target="_blank"></a></li>
+                                <li>1-2.新增/編修場地設備 <a href="ilosh_data_spaceedit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
