--- a/space_list.htm
+++ b/space_list.htm
@@ -205,7 +205,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green" onclick="window.location.href='spacerentEdit.htm';">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -253,7 +253,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -298,7 +298,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -343,7 +343,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -388,7 +388,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -433,7 +433,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -478,7 +478,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -523,7 +523,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -565,7 +565,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -608,7 +608,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -651,7 +651,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -693,7 +693,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -733,7 +733,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -776,7 +776,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -819,7 +819,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -859,7 +859,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -899,7 +899,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -942,7 +942,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -982,7 +982,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -1022,7 +1022,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">租用狀態管理</button>
+                                                <button class="btn btn-green">租金費用管理</button>
                                             </div>
                                         </div>
                                     </div>
