--- a/data_spaceedit.htm
+++ b/data_spaceedit.htm
@@ -75,7 +75,7 @@
                         <!--button class="btn" onclick="window.location.href='data_list_noTree.htm';">放棄</button-->
                         <div class="function">
                             <ul>
-                                <li ><a href="spacerentEdit.htm">租借狀態設定</a></li>
+                                <li ><a href="schedulerentEdit.htm">租借費用設定</a></li>
                                 <li class="icon_back"><a href="javascript: history.back();">回上一頁</a></li>
                             </ul>
                         </div>
