--- a/space_list.htm
+++ b/space_list.htm
@@ -205,7 +205,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green" onclick="window.location.href='spacerentEdit.htm';">租金費用管理</button>
+                                                <button class="btn btn-green" onclick="window.location.href='schedulerentEdit.htm';">租金費用管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
