--- a/schedulerentEdit.htm
+++ b/schedulerentEdit.htm
@@ -698,7 +698,7 @@
     // first example
     $(".treeview .treeview").treeview();
     $('header').load("header.htm");
-    $('aside').load("aside.htm");
+    $('aside').load("aside_ticc.htm");
     </script>
 </body>
 
