--- a/aside_ticc.htm
+++ b/aside_ticc.htm
@@ -129,8 +129,8 @@
                     <span>客製化管理</span>
                 </a>
                 <ul>
-                    <li><a href="#"><span>空間管理</span></a></li>
-                    <li><a href="#"><span>預約管理</span></a></li>
+                    <li><a href="space_list.htm"><span>空間管理</span></a></li>
+                    <li><a href="reservationList.htm"><span>預約管理</span></a></li>
                     <li><a href="#"><span>聯絡我們管理</span></a></li>
                 </ul>
             </li>
