--- a/aside_ticc.htm
+++ b/aside_ticc.htm
@@ -131,7 +131,7 @@
                 <ul>
                     <li><a href="space_list.htm"><span>空間管理</span></a></li>
                     <li><a href="reservationList.htm"><span>預約管理</span></a></li>
-                    <li><a href="#"><span>聯絡我們管理</span></a></li>
+                    <li><a href="contactList.htm"><span>聯絡我們管理</span></a></li>
                 </ul>
             </li>
         </ul>
