--- a/index_list.html
+++ b/index_list.html
@@ -267,7 +267,7 @@
                         <td>AP功能：聯絡我們管理</td>
                         <td>
                             <ul>
-                                <li>3-1.聯絡紀錄 <a href="#" target="_blank"></a></li>
+                                <li>3-1.聯絡紀錄 <a href="contactList.htm" target="_blank"></a></li>
                                 <li>3-2.回覆與管理 <a href="#" target="_blank"></a></li>
                             </ul>
                         </td>
