--- a/contactList.htm
+++ b/contactList.htm
@@ -39,7 +39,7 @@
             <div class="grid">
                 <div class="container">
                     <div class="title">
-                        <h2>預約管理</h2>
+                        <h2>聯絡我們管理</h2>
                         <button class="btn btn-primary btn-adv">
                             <i class="i_search"></i></button>
                     </div>
@@ -206,7 +206,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">1</td>
-                                                    <td><a href="#">2022050810022</a></td>
+                                                    <td><a href="contactEdit.htm">2022050810022</a></td>
                                                     <td>聯絡我們</td>
                                                     <td>liucc@hyweb.com.tw</td>
                                                     <td>劉佳淇</td>
@@ -215,14 +215,14 @@
                                                     <td><time>2022/07/16</time></td>
                                                     <td>
                                                         <div class="btn_grp">
-                                                        <a href="" class="btn"><i class="i_edit"></i>編輯</a>
+                                                        <a href="contactEdit.htm" class="btn"><i class="i_edit"></i>編輯</a>
                                                         </div>
                                                     </td>
                                                 </tr>
                                                 <tr>
                                                     <td><input type="checkbox"></td>
-                                                    <td class="num">1</td>
-                                                    <td><a href="#">2022050810021</a></td>
+                                                    <td class="num">2</td>
+                                                    <td><a href="contactEdit.htm">2022050810021</a></td>
                                                     <td>預約洽訂</td>
                                                     <td>liucc@hyweb.com.tw</td>
                                                     <td>劉佳淇</td>
@@ -231,13 +231,13 @@
                                                     <td><time>2022/07/16</time></td>
                                                     <td>
                                                         <div class="btn_grp">
-                                                        <a href="" class="btn"><i class="i_edit"></i>編輯</a>
+                                                            <a href="contactEdit.htm" class="btn"><i class="i_edit"></i>編輯</a>
                                                         </div>
                                                     </td>
                                                 </tr>
                                                 <tr>
                                                     <td><input type="checkbox"></td>
-                                                    <td class="num">1</td>
+                                                    <td class="num">3</td>
                                                     <td><a href="#">2022050810020</a></td>
                                                     <td>聯絡我們</td>
                                                     <td>liucc@hyweb.com.tw</td>
