--- a/index_list.html
+++ b/index_list.html
@@ -268,7 +268,7 @@
                         <td>
                             <ul>
                                 <li>3-1.聯絡紀錄 <a href="contactList.htm" target="_blank"></a></li>
-                                <li>3-2.回覆與管理 <a href="#" target="_blank"></a></li>
+                                <li>3-2.回覆與管理 <a href="contactEdit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
