--- a/schedulerentEdit.htm
+++ b/schedulerentEdit.htm
@@ -61,31 +61,6 @@
                                 </div>
                                 <div class="_content">
                                     <div class="flex-form">
-                                        <!--h4>新增優惠檔期</h4>
-                                        <div class="form_grp">
-                                            <div class="form_content form_inline">
-                                                <div class="labelEffect">
-                                                    <input name="" type="text" value="">
-                                                    <label>檔期名稱</label>
-                                                    <div class="help">請輸入檔期名稱</div>
-                                                </div>
-                                                <div class="startDate">
-                                                    <div class="labelEffect">
-                                                        <input name="" type="text" value="" onfocus="(this.type='date')" onblur="if(!this.value) this.type='text'" style="width:15em;">
-                                                        <label>開始日期</label>
-                                                    </div>
-                                                </div>
-                                                <div class="endDate">
-                                                    <div class="labelEffect">
-                                                        <input name="" type="text" value="" onfocus="(this.type='date')" onblur="if(!this.value) this.type='text'" style="width:15em;">
-                                                        <label>結束日期</label>
-                                                    </div>
-                                                </div>
-                                                <button class="btn btn-yellow" style="width:6em;height:2.75em;padding-left:1em;"><i class="i_add"></i>新增</button>
-                                            </div>
-                                        </div>
-                                        <hr style="height:1px;width:100%;"-->
-
                                         <h4>固定週期：週一至週五
                                             <div class="additional" style="display:inline-block;margin-left:20px;">
                                                 <div class="checkSwitch">
@@ -485,7 +460,8 @@
                                         </div>
                                         <hr style="height:1px;width:100%;">
 
-                                        <h4>自訂檔期：
+                                        <!--確認不需提供優惠檔期-->
+                                        <!--h4>自訂檔期：
                                             <div class="additional" style="display:inline-block;margin-left:20px;">
                                                 <div class="checkSwitch">
                                                     <label>
@@ -642,7 +618,7 @@
                                         <hr style="height:1px;width:100%;">
                                         <div class="additional">
                                             <button class="btn btn-yellow" style="height:2.75em;padding-left:1em;"><i class="i_add"></i>新增一組檔期</button>
-                                        </div>
+                                        </div-->
     
                                         <!--div class="btn_grp">
 											<button class="btn btn-orange">編修儲存</button>
